syntax = "proto3";

import "github.com/infobloxopen/protoc-gen-gorm/options/gorm.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "github.com/protobuf/src/google/protobuf/timestamp.proto";

option go_package = "proto";

message BusinessAccount {
	option (gorm.opts) = {
        ormable: true,
    };
	uint32 id = 1 [(gorm.field).tag = {type: "serial" primary_key: true, auto_increment: true}];
	string companyName = 2;
	string companyAddress = 3;
	PhoneNumber phoneNumber = 4;
	string category = 5;
	Media media = 6 [(gorm.field).has_one.preload = true];
	string password = 7;
	string email = 8;
	bool isActive = 9;
	// define the types of businesses available
	BusinessType typeOfBusiness = 10;
	// defines business top goals
	// sell products, market business, sell services, sell memberships, build community
	repeated string businessGoals = 11;
	// the stage at which the business is at
	// collecting inspiration, formalizing an idea or personal project, project or hobby to business,
	// growing existing business
	string businessStage = 12;
	// type of merchant
	MerchantType merchantType = 13;
	// processing method details
	PaymentProcessingMethods paymentDetails = 14;
	// types of services blackspace can manage on the business' behalf
	ServicesManagedByBlackspace servicesManagedByBlackspace = 15;
	// business address
	Address founderAddress = 16;
	// Business Interests
	Topics subscribedTopics = 17 [(gorm.field).has_one.preload = true];
	// authentication service ref
	uint32 authnId = 18;
}

message Topics {
	option (gorm.opts) = {
        ormable: true,
    };
	uint32 id = 1 [(gorm.field).tag = {type: "serial" primary_key: true, auto_increment: true}];
	bool Technology = 2;
	bool Health = 3;
	bool Food = 4;
	bool Science = 5;
	bool Music = 6;
	bool Travel = 7;
	bool Business = 8;
	bool Cooking = 9;
	bool FashionAndStyle = 10;
	bool Design = 11;
	bool Art = 12;
}

message Media {
	option (gorm.opts) = {
        ormable: true,
    };
	uint32 id = 1 [(gorm.field).tag = {type: "serial" primary_key: true, auto_increment: true}];
	string website = 2;
	string instagram = 3;
	string facebook = 4;
	string linkedIn = 5;
	string pinterest = 6;
}


message Address {
	string Address = 1;
	string ApartmentUnit = 2;
	string ZipCode = 3;
	string City = 4;
	string State = 5;
	DateOfBirth birthdate = 6;
}

message DateOfBirth {
	string Month = 1;
	string Day = 2;
	string Year = 3;
}

enum ServicesManagedByBlackspace {
	// create items or services to speed up checkout and enhance reports
	ItemCatalog = 0;
	// sell gift cards in store or online to boost sales
	GiftCards = 1;
	// provide discounts to boost visibility and sales
	Discounts = 2;
	// email your customers to tell them about promotions or special events
	MarketingCampaigns = 3;
	// keep your customers coming back with customized rewards program
	LoyaltyProgram = 4;
	// get access to financing by running your business on blackspace
	FundingYourBusiness = 5;
	// access analytics (indepth) data on buying trends
	Analytics = 6;
}

message PaymentProcessingMethods {
	repeated PaymentOptions paymentOptions = 1;
	repeated PaymentMedium medium = 2;
}

enum PaymentMedium {
	MobilePhone = 0;
	Tablet = 1;
	Computer = 2;
}

enum PaymentOptions {
	BrickAndMortar = 0;
	OnTheGo = 1;
	Online = 2;
	ThroughInvoices = 3;
}

message BusinessType {
	BusinessCategory category = 1;
	BusinessSubCategory subCategory = 2;
}

enum BusinessCategory {
	BeautyAndPersonalCare = 0;
	Tech = 1;
	CharitiesEducationMembership = 2;
	FoodAndDrink = 3;
	HealthCareAndFitness = 4;
	HomeAndRepair = 5;
	LeisureAndEntertainment = 6;
	ProfessionalServices = 7;
	Retail = 8;
	Transportation = 9;
}

enum BusinessSubCategory {
	// art, marketing, travel, interior design, music, technology, food, restaurants, politics, health & beauty,
	// design, non-profit, jewelry, gaming, magazine, photography, fitness, consulting, fashion, services
	Art = 0;
	Marketing = 1;
	Travel = 2;
	Interior_Design = 3;
	Music = 4;
	Technology = 5;
	Food = 6;
	Restaurants = 7;
	Polictics = 8;
	Health_And_Beauty = 9;
	Design = 10;
	Non_Profit = 11;
	Jewelry = 12;
	Gaming = 13;
	Magazine = 14;
	Photography = 15;
	Fitenss = 16;
	Consulting = 17;
	Fashion = 18;
	Services = 19;
}

enum MerchantType {
	OnePersonBusiness  = 0;
	SoleProprietor = 1;
	SideProject = 2;
	CasualUse = 3;
	LLCCorporation = 4;
	Partnership = 5;
	Charity = 6;
	ReligiousOrganization = 7;
}

message PhoneNumber {
	string number = 1;
	PhoneType type = 2;
}

enum PhoneType {
	MOBILE = 0;
	HOME = 1;
	WORK = 2;
}
